translated cart and auth

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -170,41 +170,101 @@
   "reviewAddSuccess": "تمت إضافة المراجعة بنجاح!",
   "reviewDeleteSuccess": "تم حذف المراجعة بنجاح!",
   "jojooshopCom": "jojooshop.com",
-  "settings": "إعدادات",
-  "reset": "إعادة ضبط",
-  "mode": "وضع",
-  "contrast": "مقابلة",
-  "direction": "اتجاه",
-  "stretch": "تمتد",
-  "presets": "الإعدادات المسبقة",
-  "exitFullscreen": "الخروج من الشاشة الكاملة",
-  "fullscreen": "تكبير الشاشة",
-  "sortBy": "ترتيب حسب",
-  "featured": "متميز",
+  "allRightsReserved": "جميع الحقوق محفوظة",
+  "madeBy": "صنعت بواسطة",
+  "legal": "قانوني",
+  "termsAndConditions": "الشروط والأحكام",
+  "privacyPolicy": "سياسة الخصوصية",
+  "contact": "اتصل",
+  "adminEmail": "admin@jojooshop.com",
+  "useContentDisclaimer": "لاستخدام محتوى Jojoshop ، يكفي أن يكون لديك هدف غير تجاري وذكر المصدر. جميع حقوق هذا الموقع تنتمي إلى Jojoshop.",
+  "settings": "الإعدادات",
+  "reset": "إعادة تعيين",
+  "mode": "الوضع",
+  "contrast": "التباين",
+  "direction": "الاتجاه",
+  "stretch": "تمديد",
+  "presets": "الضبط المسبق",
+  "exitFullscreen": "خروج من وضع ملء الشاشة",
+  "fullscreen": "ملء الشاشة",
+  "sortBy": "الترتيب حسب",
+  "featured": "مميز",
   "newest": "الأحدث",
-  "highestDiscount": "أعلى الخصم",
-  "priceHighToLow": "السعر الاعلى الى الادنى",
-  "priceLowToHigh": "السعر من الارخص للاعلى",
-  "min": "دقيقة",
-  "max": "الأعلى",
-  "rating": "تقييم",
+  "heighestDiscount": "الأعلى",
+  "highestDiscount": "أعلى خصم",
+  "priceHighToLow": "السعر: من الأعلى إلى الأدنى",
+  "priceLowToHigh": "السعر: من الأدنى إلى الأعلى",
+  "min": "الحد الأدنى",
+  "max": "الحد الأقصى",
+  "rating": "التقييم",
   "filters": "المرشحات",
   "up": "أعلى",
-  "resultsFound": "العثور على نتائج",
-  "shop": "محل",
-  "noData": "لاتوجد بيانات",
-  "productDetails": "تفاصيل المنتج",
-  "reviews": "التعليقات",
-  "noReview": "لا مراجعة",
-  "outOfStock": "إنتهى من المخزن",
-  "lowStock": "الأسهم منخفضة",
-  "inStock": "في الأوراق المالية",
-  "averageRating": "متوسط ​​تقييم",
-  "writeYourReview": "اكتب مراجعتك",
-  "addReview": "إضافة مراجعة",
-  "yourReviewAbout": "رأيك حول هذا المنتج",
-  "cancel": "يلغي",
-  "post": "بريد",
+  "resultsFound": "تم العثور على نتائج",
+  "shop": "المتجر",
+  "noData": "لم يتم العثور على بيانات",
+  "notFound": "غير موجود",
+  "noResults": "لم يتم العثور على نتائج",
+  "tryChecking": "جرب التحقق من الأخطاء الإملائية أو استخدام كلمات كاملة",
+  "enterKeywords": "الرجاء إدخال الكلمات الرئيسية",
+  "productDetails": "المنتج: التفاصيل",
+  "reviews": "التقييمات",
+  "noReview": "لا توجد تقييمات",
+  "outOfStock": "نفذت من المخزن",
+  "lowStock": "الكمية محدودة",
+  "inStock": "متوفر في المخزن",
+  "averageRating": "متوسط التقييم",
+  "writeYourReview": "كتابة تقييمك",
+  "addReview": "إضافة تقييم",
+  "yourReviewAbout": "تقييمك حول هذا المنتج",
+  "cancel": "إلغاء",
+  "post": "نشر",
   "ratingError": "يجب أن يكون التقييم أكبر من أو يساوي 1",
-  "reviewRequired": "المراجعة مطلوبة"
+  "reviewRequired": "التقييم مطلوب",
+  "checkout": "الدفع",
+  "billingAndAddress": "الفوترة والعنوان",
+  "item": "العنصر",
+  "cartEmpty": "السلة فارغة",
+  "shoppingDescription": "يبدو أنك ليس لديك أي عناصر في سلة التسوق الخاصة بك.",
+  "continueShopping": "متابعة التسوق",
+  "orderSummary": "ملخص الطلب",
+  "subTotal": "الإجمالي الفرعي",
+  "vatIncluded": "(القيمة المضافة مشمولة إذا كانت قابلة للتطبيق)",
+  "discountPlaceholder": "رموز الخصم / الهدايا",
+  "apply": "تطبيق",
+  "newAddress": "عنوان جديد",
+  "deliverToThisAddress": "توصيل إلى هذا العنوان",
+  "free": "مجاناً",
+  "deliveryOption5To7Days": "توصيل خلال 5-7 أيام",
+  "standard": "قياسي",
+  "deliveryOption3To5Days": "توصيل خلال 3-5 أيام",
+  "express": "سريع",
+  "deliveryOption2To3Days": "توصيل خلال 2-3 أيام",
+  "payWithPaypal": "الدفع عبر باي بال",
+  "paypalDescription": "سيتم توجيهك إلى موقع باي بال لإكمال عملية الشراء الخاصة بك بشكل آمن.",
+  "creditDebitCard": "بطاقة الائتمان / الخصم",
+  "creditDebitCardDescription": "ندعم بطاقات ماستركارد وفيزا وديسكفر وسترايب.",
+  "cash": "نقداً",
+  "cashDescription": "ادفع نقدًا عند توصيل طلبك.",
+  "cardTypeRequired": "نوع البطاقة مطلوب",
+  "cardNumberRequired": "رقم البطاقة مطلوب",
+  "shipByRequired": "طريقة الشحن مطلوبة",
+  "completeOrder": "اتمام الطلب",
+  "thankYouForPurchase": "شكرًا لشرائك!",
+  "thanksForPlacingOrder": "شكرًا لطلبك.",
+  "notificationSentWithinDays": "سنرسل لك إشعارًا في غضون 5 أيام عندما يتم الشحن.",
+  "contactUsForQuestions": "إذا كان لديك أي أسئلة أو استفسارات، فلا تتردد في الاتصال بنا.",
+  "allTheBest": "كل التوفيق!",
+  "downloadAsPDF": "تحميل كملف PDF",
+  "loginToProceed": "تسجيل الدخول للمضي قدما",
+  "login": "تسجيل الدخول",
+  "emailInvalid": "يرجى إدخال بريد إلكتروني صالح",
+  "passwordError": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
+  "createAccount": "إنشاء حساب",
+  "forgotPassword": "هل نسيت كلمة السر",
+  "passwordNotMatch": "كلمة السر غير متطابقة",
+  "register": "يسجل",
+  "alreadyHaveAccount": "هل لديك حساب",
+  "termsOfService": "شروط الخدمة",
+  "bySignIn": "بالتسجيل، أوافق على -",
+  "and": "و"
 }
