--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -210,5 +210,52 @@
   "cancel": "取消",
   "post": "发布",
   "ratingError": "评分必须大于或等于1",
-  "reviewRequired": "评论是必填项"
+  "reviewRequired": "评论是必填项",
+  "checkout": "查看",
+  "billingAndAddress": "账单和地址",
+  "item": "商品",
+  "cartEmpty": "购物车是空的",
+  "shoppingDescription": "看起来你的购物车中没有物品。",
+  "continueShopping": "继续购物",
+  "orderSummary": "订单摘要",
+  "subTotal": "小计",
+  "free": "免费",
+  "vatIncluded": "(如适用，含增值税)",
+  "discountPlaceholder": "折扣码 / 礼品",
+  "apply": "应用",
+  "newAddress": "新地址",
+  "deliverToThisAddress": "寄送至此地址",
+  "deliveryOption5To7Days": "5-7 天交付",
+  "standard": "标准",
+  "deliveryOption3To5Days": "3-5 天交付",
+  "express": "快递",
+  "deliveryOption2To3Days": "2-3 天交付",
+  "payWithPaypal": "使用PayPal支付",
+  "paypalDescription": "您将被重定向到PayPal网站，以安全地完成购买。",
+  "creditDebitCard": "信用卡/借记卡",
+  "creditDebitCardDescription": "我们支持Mastercard、Visa、Discover和Stripe。",
+  "cash": "现金",
+  "cashDescription": "在您的订单送达时付款。",
+  "cardTypeRequired": "卡类型是必填项",
+  "cardNumberRequired": "卡号是必填项",
+  "shipByRequired": "发货方式是必填项",
+  "completeOrder": "完成订单",
+  "thankYouForPurchase": "感谢您的购买！",
+  "thanksForPlacingOrder": "感谢您下单。",
+  "notificationSentWithinDays": "我们将在发货时的5天内向您发送通知。",
+  "contactUsForQuestions": "如果您有任何问题或疑问，请随时与我们联系。",
+  "allTheBest": "一切顺利！",
+  "downloadAsPDF": "下载为PDF",
+  "loginToProceed": "登录以继续",
+  "login": "登录",
+  "emailInvalid": "请输入有效电子邮件",
+  "passwordError": "密码必须至少6个字符",
+  "createAccount": "创建一个帐户",
+  "forgotPassword": "忘记密码",
+  "passwordNotMatch": "密码不匹配",
+  "register": "登记",
+  "alreadyHaveAccount": "已经有帐户",
+  "termsOfService": "服务条款",
+  "bySignIn": "注册即表示我同意 -",
+  "and": "和"
 }
