--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -219,5 +219,52 @@
   "cancel": "Cancel ",
   "post": "Post",
   "ratingError": "Rating must be greater than or equal to 1",
-  "reviewRequired": "Review is required"
+  "reviewRequired": "Review is required",
+  "checkout": "Checkout",
+  "billingAndAddress": "Billing & address",
+  "item": "Item",
+  "cartEmpty": "Cart is empty",
+  "shoppingDescription": "Look like you have no items in your shopping cart.",
+  "continueShopping": "Continue Shopping",
+  "orderSummary": "Order Summary",
+  "subTotal": "Sub Total",
+  "vatIncluded": "(VAT included if applicable)",
+  "discountPlaceholder": "Discount codes / Gifts",
+  "apply": "Apply",
+  "newAddress": "New Address",
+  "deliverToThisAddress": "Deliver to this Address",
+  "free": "Free",
+  "deliveryOption5To7Days": "5-7 Days delivery",
+  "standard": "Standard",
+  "deliveryOption3To5Days": "3-5 Days delivery",
+  "express": "Express",
+  "deliveryOption2To3Days": "2-3 Days delivery",
+  "payWithPaypal": "Pay with Paypal",
+  "paypalDescription": "You will be redirected to PayPal website to complete your purchase securely.",
+  "creditDebitCard": "Credit / Debit Card",
+  "creditDebitCardDescription": "We support Mastercard, Visa, Discover and Stripe.",
+  "cash": "Cash",
+  "cashDescription": "Pay with cash when your order is delivered.",
+  "cardTypeRequired": "CardType is required",
+  "cardNumberRequired": "CardNumber is required",
+  "shipByRequired": "Ship By is required",
+  "completeOrder": "Complete Order",
+  "thankYouForPurchase": "Thank you for your purchase!",
+  "thanksForPlacingOrder": "Thanks for placing your order.",
+  "notificationSentWithinDays": "We will send you a notification within 5 days when it ships.",
+  "contactUsForQuestions": "If you have any questions or queries, feel free to contact us.",
+  "allTheBest": "All the best!",
+  "downloadAsPDF": "Download as PDF",
+  "loginToProceed": "Login to proceed",
+  "login": "Login",
+  "emailInvalid": "Please enter a valid email",
+  "passwordError": "Password must be at least 6 characters",
+  "createAccount": "Create An Account",
+  "forgotPassword": "Forgot Password",
+  "passwordNotMatch": "Password does not match",
+  "register": "Register",
+  "alreadyHaveAccount": "Already have an account",
+  "termsOfService": "Terms of Service",
+  "bySignIn": "By signing up, I agree to -",
+  "and": "And"
 }
