--- a/src/locales/langs/fa.json
+++ b/src/locales/langs/fa.json
@@ -170,41 +170,101 @@
   "reviewAddSuccess": "بررسی با موفقیت اضافه شد!",
   "reviewDeleteSuccess": "بررسی با موفقیت حذف شد!",
   "jojooshopCom": "jojooshop.com",
+  "allRightsReserved": "تمامی حقوق محفوظ است",
+  "madeBy": "ساخته شده توسط",
+  "legal": "قانونی",
+  "termsAndConditions": "شرایط و ضوابط",
+  "privacyPolicy": "سیاست حفظ حریم خصوصی",
+  "contact": "تماس با ما",
+  "adminEmail": "admin@jojooshop.com",
+  "useContentDisclaimer": "برای استفاده از محتوای Jojoshop، کافی است هدف غیرتجاری داشته باشید و منبع را ذکر کنید. تمام حقوق این وب‌سایت متعلق به Jojoshop می‌باشد.",
   "settings": "تنظیمات",
-  "reset": "بازنشانی کنید",
+  "reset": "بازنشانی",
   "mode": "حالت",
   "contrast": "تضاد",
   "direction": "جهت",
-  "stretch": "کش آمدن",
-  "presets": "تنظیمات از پیش تعیین شده",
-  "exitFullscreen": "خروج از تمام صفحه",
+  "stretch": "کشیدن",
+  "presets": "تنظیمات پیش‌فرض",
+  "exitFullscreen": "خروج از حالت تمام صفحه",
   "fullscreen": "تمام صفحه",
   "sortBy": "مرتب سازی بر اساس",
   "featured": "ویژه",
   "newest": "جدیدترین",
+  "heighestDiscount": "بالاترین تخفیف",
   "highestDiscount": "بالاترین تخفیف",
   "priceHighToLow": "قیمت: بالا به پایین",
-  "priceLowToHigh": "قیمت: کم به بالا",
+  "priceLowToHigh": "قیمت: پایین به بالا",
   "min": "حداقل",
   "max": "حداکثر",
-  "rating": "رتبه بندی",
+  "rating": "امتیاز",
   "filters": "فیلترها",
   "up": "بالا",
   "resultsFound": "نتایج یافت شد",
-  "shop": "خرید کنید",
-  "noData": "داده ای یافت نشد",
-  "productDetails": "جزئیات محصول",
-  "reviews": "بررسی ها",
-  "noReview": "بدون بررسی",
+  "shop": "فروشگاه",
+  "noData": "هیچ داده‌ای یافت نشد",
+  "notFound": "یافت نشد",
+  "noResults": "هیچ نتیجه‌ای یافت نشد",
+  "tryChecking": "تلاش کنید اشتباهات تایپی را بررسی کنید یا کلمات کامل را استفاده کنید",
+  "enterKeywords": "لطفاً کلمات کلیدی را وارد کنید",
+  "productDetails": "محصول: جزئیات",
+  "reviews": "نقد و بررسی‌ها",
+  "noReview": "بدون نقد و بررسی",
   "outOfStock": "تمام شده",
-  "lowStock": "موجودی کم",
-  "inStock": "در انبار",
+  "lowStock": "موجودی محدود",
+  "inStock": "موجود در انبار",
   "averageRating": "میانگین امتیاز",
-  "writeYourReview": "نظر خود را بنویسید",
-  "addReview": "افزودن نظر",
-  "yourReviewAbout": "نظر شما در مورد این محصول",
-  "cancel": "لغو کنید",
-  "post": "پست",
-  "ratingError": "رتبه بندی باید بزرگتر یا مساوی 1 باشد",
-  "reviewRequired": "بررسی لازم است"
+  "writeYourReview": "نقد و بررسی خود را بنویسید",
+  "addReview": "افزودن نقد و بررسی",
+  "yourReviewAbout": "نقد و بررسی شما درباره این محصول",
+  "cancel": "لغو",
+  "post": "ارسال",
+  "ratingError": "امتیاز باید بزرگتر یا مساوی 1 باشد",
+  "reviewRequired": "نقد و بررسی الزامی است",
+  "checkout": "وارسی",
+  "billingAndAddress": "صورتحساب و آدرس",
+  "item": "محصول",
+  "cartEmpty": "سبد خرید خالی است",
+  "shoppingDescription": "به نظر می‌رسد که هیچ محصولی در سبد خرید شما وجود ندارد.",
+  "continueShopping": "ادامه خرید",
+  "orderSummary": "خلاصه سفارش",
+  "subTotal": "مجموع جزئی",
+  "vatIncluded": "(مالیات بر ارزش افزوده در صورت لزوم محاسبه شده است)",
+  "discountPlaceholder": "کد تخفیف / هدیه",
+  "apply": "اعمال",
+  "newAddress": "آدرس جدید",
+  "deliverToThisAddress": "تحویل به این آدرس",
+  "free": "رایگان",
+  "deliveryOption5To7Days": "تحویل در 5-7 روز",
+  "standard": "استاندارد",
+  "deliveryOption3To5Days": "تحویل در 3-5 روز",
+  "express": "سریع",
+  "deliveryOption2To3Days": "تحویل در 2-3 روز",
+  "payWithPaypal": "پرداخت با پیپال",
+  "paypalDescription": "شما به وب‌سایت پیپال هدایت می‌شوید تا خرید خود را به صورت امن کامل کنید.",
+  "creditDebitCard": "کارت اعتباری / بدهی",
+  "creditDebitCardDescription": "ما از کارت‌های مسترکارد، ویزا، دیسکاور و استرایپ پشتیبانی می‌کنیم.",
+  "cash": "نقد",
+  "cashDescription": "پرداخت نقدی هنگام تحویل سفارش شما.",
+  "cardTypeRequired": "نوع کارت اعتباری الزامی است",
+  "cardNumberRequired": "شماره کارت الزامی است",
+  "shipByRequired": "روش ارسال الزامی است",
+  "completeOrder": "تکمیل سفارش",
+  "thankYouForPurchase": "با تشکر از خرید شما!",
+  "thanksForPlacingOrder": "بابت ثبت سفارش شما ممنونیم.",
+  "notificationSentWithinDays": "ما در عرض 5 روز به شما اطلاع‌رسانی خواهیم کرد که سفارش شما ارسال شده است.",
+  "contactUsForQuestions": "اگر سوال یا سوالی دارید، با ما تماس بگیرید.",
+  "allTheBest": "تمام بهترین ها!",
+  "downloadAsPDF": "دانلود به صورت PDF",
+  "loginToProceed": "برای ادامه وارد شوید",
+  "login": "وارد شدن",
+  "emailInvalid": "لطفا یک ایمیل معتبر وارد کنید",
+  "passwordError": "رمز عبور باید حداقل 6 کاراکتر باشد",
+  "createAccount": "ایجاد یک حساب کاربری",
+  "forgotPassword": "رمز عبور را فراموش کرده اید",
+  "passwordNotMatch": "رمز عبور مطابقت ندارد",
+  "register": "ثبت نام",
+  "alreadyHaveAccount": "یک حساب کاربری دارید",
+  "termsOfService": "شرایط استفاده از خدمات",
+  "bySignIn": "با ثبت نام، موافقت می کنم -",
+  "and": "و"
 }
