translated user profile and orders

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -266,5 +266,26 @@
   "alreadyHaveAccount": "هل لديك حساب",
   "termsOfService": "شروط الخدمة",
   "bySignIn": "بالتسجيل، أوافق على -",
-  "and": "و"
+  "and": "و",
+  "office": "مكتب",
+  "addressType": "نوع العنوان",
+  "myOrders": "طلباتي",
+  "logout": "تسجيل خروج",
+  "updateUassword": "تطوير كلمة السر",
+  "addressBook": "دليل العناوين",
+  "default": "تقصير",
+  "cityRequired": "المدينة مطلوبة",
+  "stateRequired": "الدولة مطلوبة",
+  "countryRequried": "الدولة مطلوبة",
+  "zipCodeRequried": "الرمز البريدي مطلوب",
+  "city": "بلدة/مدينة",
+  "state": "ولاية",
+  "zipCode": "الرمز البريدي",
+  "useAddressAsDefault": "استخدم هذا العنوان كافتراضي",
+  "update": "تحديث",
+  "newPassword": "كلمة المرور الجديدة",
+  "account": "حساب",
+  "orderNumber": "رقم الأمر",
+  "itmes": "أغراض",
+  "paid": "مدفوع"
 }
