--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -257,5 +257,33 @@
   "alreadyHaveAccount": "已经有帐户",
   "termsOfService": "服务条款",
   "bySignIn": "注册即表示我同意 -",
-  "and": "和"
+  "and": "和",
+  "office": "办公室",
+  "addressType": "地址类型",
+  "orderHasBeenCreated": "订单已创建",
+  "orderIsBeingProcessed": "订单正在处理",
+  "orderHasBeenPacked": "订单已打包",
+  "packageHandedToShippingCarrier": "包裹已交付给物流承运商",
+  "packageInTransitToDestination": "包裹正在运送中",
+  "orderIsBeingDelivered": "订单正在派送中",
+  "orderisDelivered": "订单已送达",
+  "myOrders": "我的订单",
+  "logout": "登出",
+  "updateUassword": "更新密码",
+  "addressBook": "地址簿",
+  "default": "默认",
+  "cityRequired": "城市是必需的",
+  "stateRequired": "州/省是必需的",
+  "countryRequried": "国家是必需的",
+  "zipCodeRequried": "邮政编码是必需的",
+  "city": "城市",
+  "state": "州/省",
+  "zipCode": "邮政编码",
+  "useAddressAsDefault": "将此地址设为默认",
+  "update": "更新",
+  "newPassword": "新密码",
+  "account": "Account",
+  "orderNumber": "Order Number",
+  "itmes": "Items",
+  "paid": "Paid"
 }
