--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -266,5 +266,33 @@
   "alreadyHaveAccount": "Already have an account",
   "termsOfService": "Terms of Service",
   "bySignIn": "By signing up, I agree to -",
-  "and": "And"
+  "and": "And",
+  "office": "Office",
+  "addressType": "Address type",
+  "orderHasBeenCreated": "Order has been created",
+  "orderIsBeingProcessed": "Order is being processed",
+  "orderHasBeenPacked": "Order has been packed",
+  "packageHandedToShippingCarrier": "Package handed to shipping carrier",
+  "packageInTransitToDestination": "Package in transit to destination",
+  "orderIsBeingDelivered": "Order is being delivered",
+  "orderisDelivered": "Order has been delivered",
+  "myOrders": "My Orders",
+  "logout": "Logout",
+  "updateUassword": "Update password",
+  "addressBook": "Address Book",
+  "default": "Default",
+  "cityRequired": "City is requried",
+  "stateRequired": "State is required",
+  "countryRequried": "Country is required",
+  "zipCodeRequried": "Zip code is required",
+  "city": "Town/City",
+  "state": "State",
+  "zipCode": "Zip Code",
+  "useAddressAsDefault": "Use this address as default",
+  "update": "Update",
+  "newPassword": "New Password",
+  "account": "Account",
+  "orderNumber": "Order Number",
+  "itmes": "Items",
+  "paid": "Paid"
 }
