--- a/src/locales/langs/fa.json
+++ b/src/locales/langs/fa.json
@@ -266,5 +266,26 @@
   "alreadyHaveAccount": "یک حساب کاربری دارید",
   "termsOfService": "شرایط استفاده از خدمات",
   "bySignIn": "با ثبت نام، موافقت می کنم -",
-  "and": "و"
+  "and": "و",
+  "office": "دفتر",
+  "addressType": "نوع آدرس",
+  "myOrders": "دستورات من",
+  "logout": "خروج",
+  "updateUassword": "رمز عبور را به روز کنید",
+  "addressBook": "دفترچه آدرس",
+  "default": "پیش فرض",
+  "cityRequired": "شهر الزامی است",
+  "stateRequired": "ایالت مورد نیاز است",
+  "countryRequried": "کشور مورد نیاز است",
+  "zipCodeRequried": "کد پستی مورد نیاز است",
+  "city": "شهر",
+  "state": "استان",
+  "zipCode": "کد پستی",
+  "useAddressAsDefault": "از این آدرس به عنوان پیش فرض استفاده کنید",
+  "update": "به روز رسانی",
+  "newPassword": "رمز عبور جدید",
+  "account": "حساب",
+  "orderNumber": "شماره سفارش",
+  "itmes": "موارد",
+  "paid": "پرداخت شده"
 }
