Added: jojooshop logo & fixed stack overflow error from the cart

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -293,5 +293,6 @@
   "jojooshop": "jojooshop",
   "comingSoon": "قريباً",
   "maintenance": "صيانة",
-  "verify": "يؤكد"
+  "verify": "يؤكد",
+  "emailNotFound": "البريد الإلكتروني غير موجود"
 }
