--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -282,14 +282,15 @@
   "useAddressAsDefault": "将此地址设为默认",
   "update": "更新",
   "newPassword": "新密码",
-  "account": "Account",
-  "orderNumber": "Order Number",
-  "itmes": "Items",
-  "paid": "Paid",
-  "forbidden": "Forbidden",
-  "serverError": "Internal Server Error",
+  "account": "账户",
+  "orderNumber": "订单号",
+  "itmes": "商品",
+  "paid": "已支付",
+  "forbidden": "禁止",
+  "serverError": "服务器内部错误",
   "jojooshop": "jojooshop",
-  "comingSoon": "Coming Soon",
-  "maintenance": "Maintenance",
-  "verify": "Verify"
+  "comingSoon": "即将推出",
+  "maintenance": "维护中",
+  "verify": "验证",
+  "emailNotFound": "未找到电子邮件"
 }
