--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -300,5 +300,6 @@
   "jojooshop": "jojooshop",
   "comingSoon": "Coming Soon",
   "maintenance": "Maintenance",
-  "verify": "Verify"
+  "verify": "Verify",
+  "emailNotFound": "Email not found"
 }
